# trajectory_controller

./: README.md
controller/: CMakeLists.txt  package.xml
controller/cfg/: lyapunov.cfg
controller/config/: controller.yaml
controller/include/: AbstractController.h  ControllerInterface.h  LyapunovController.h  Param.h  RosClass.h  Transformations.h  Utilities.h  talker.h
controller/include/old_files/: AEnvironment.h  AHighLevelController.h  APathProcessing.h  Math_Func.h  Navigation_Wrapper.h  Ros_Class.h  Trajectory_Controller.h  Transformations.h  matplotlibcpp.h  pathProcessing.h
controller/launch/: controller.launch  gtest.test
controller/src/: ControllerInterface.cpp  LyapunovController.cpp  RosClass.cpp  Transformations.cpp  talker.cpp
controller/src/oldFiles/: Low_Level_ControllerOld.cpp  Navigation_Wrapper.cpp  Ros_Class.cpp  Trajectory_Controller.cpp  pathProcessing.cpp  test.cpp
controller/tests/: test_example.cpp  test_example.launch
controller_msgs/: CMakeLists.txt  package.xml
controller_msgs/msg/: Control.msg  Debug.msg
